# hotboard

./: .gitignore  SPEC.md  app.js  config.yaml  hotboard.json  index.html  pyproject.toml  requirements.txt  styles.css
.github/workflows/: deploy.yml  scrape.yml
data/: hotboard.json
history/: 2026-03-15.json  2026-03-16.json  2026-03-17.json  2026-03-18.json  2026-03-19.json  2026-03-20.json  2026-03-21.json  2026-03-22.json  2026-03-23.json  2026-03-24.json  2026-03-25.json  2026-03-26.json  2026-03-27.json  2026-03-28.json  2026-03-29.json  2026-03-30.json  2026-03-31.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  (+92 more)
src/: __init__.py  main.py
src/adapters/: __init__.py  baidu.py  base.py  bilibili.py  caixin.py  coolapk.py  csdn.py  ct51.py  devto.py  digg.py  dingxiang.py  douban.py  douban_group.py  douyin.py  github_trending.py  guokr.py  hackernews.py  hellogithub.py  hostloc.py  hupu.py  huxiu.py  ifanr.py  ifeng.py  infoq.py  ithome.py  jianshu.py  juejin.py  kr36.py  kuaishou.py  lanjinger.py  miyoushe.py  netease.py  nga.py  nodeseek.py  oschina.py  pojie.py  producthunt.py  qqnews.py  reddit.py  rss.py  (+18 more)
src/config/: settings.py
src/core/: __init__.py  aggregator.py  fetcher.py  (+1 more)
web/: app.js  index.html
(+4 files in other folders)
